feat(console): fixed progress bar not displaying on windows, changed character for headers